--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>AVIAD.BIKE</title>
+    <script>
+		document.on
+    </script>
 </head>
 <body>
-<video src="./videos/vid.mp4" autoplay loop></video>
+<video autoplay loop>
+    <source src="https://github.com/aviadhahami/aviad.bike/blob/master/videos/vid.mp4?raw=true">
+</video>
+<!--<video src="./videos/vid.mp4" autoplay loop></video>-->
 
 </body>
 </html>
