--- a/index.html
+++ b/index.html
@@ -3,15 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>AVIAD.BIKE</title>
-    <script>
-		document.on
-    </script>
+    <style>
+        html{
+            width:100%;
+            height: 100%;
+            margin: 0 auto;
+        }
+        body{
+            /*background-color: #CE3F41;*/
+            margin: 0 auto;
+            background-color: black;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        video{
+            width: 80vw;
+            /*height:100%;*/
+            max-height: 90vh;
+            margin:0 auto;
+            border: 3px solid black;
+            outline: none;
+        }
+    </style>
 </head>
 <body>
 <video autoplay loop>
-    <source src="https://github.com/aviadhahami/aviad.bike/blob/master/videos/vid.mp4?raw=true">
+    <source type="video/mp4" src="https://github.com/aviadhahami/aviad.bike/blob/master/videos/vid.mp4?raw=true">
 </video>
-<!--<video src="./videos/vid.mp4" autoplay loop></video>-->
 
 </body>
 </html>
