--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>AVIAD.BIKE</title>
     <style>
-        html{
-            width:100%;
+        html {
+            width: 100%;
             height: 100%;
             margin: 0 auto;
         }
-        body{
+
+        body {
             /*background-color: #CE3F41;*/
             margin: 0 auto;
-            background-color: black;
             width: 100%;
             height: 100%;
             overflow: hidden;
@@ -20,12 +20,18 @@
             display: flex;
             justify-content: center;
             align-items: center;
+
+            background-color: rgb(0, 0, 0);
+            background-image: url(http://www.zingerbugimages.com/backgrounds/multi_colored_stars.gif);
+            background-position: top left;
+            background-repeat: repeat;
+            background-attachment: fixed;
         }
-        video{
+
+        video {
             width: 80vw;
-            /*height:100%;*/
             max-height: 90vh;
-            margin:0 auto;
+            margin: 0 auto;
             border: 3px solid black;
             outline: none;
         }
