HAHAHAHHAHAHAHHAHAHAHHAHAHAHHAHAHA FUCKED YOU SIDEWAYS CHRROMEEEEEEEEEEEEEEEEEEEEEEEEEEEEE

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </script>
 </head>
 <body>
-<video autoplay loop>
+<video autoplay loop controls>
     <source type="video/mp4" src="https://github.com/aviadhahami/aviad.bike/blob/master/videos/vid.mp4?raw=true">
 </video>
 
